Updated project text and left aligned about me paragraph

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <div class="container px-5">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-xxl-8">
-                            <div class="text-center my-5">
-                                <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">My name is Dylan Kerr and like to bring creative ideas to life.</p>
-                                <p class="text-muted">As someone with a wide variety of interests, I have continually explored different forms of art and design. My desire to understand how the world works, how we interact with our environment, and how we collaborate with each other captivates me. With my background in product design and virtual / augmented reality development, I have naturally found myself interested in designing 3D assets. It is something that gets me excited because of the limitless possibilities in this ever-changing landscape of technology. Please take a look at some of my projects and reach out to me to start up a conversation!</p>
+                            <div class="my-5">
+                                <h2 class="text-center display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
+                                <p class="text-center lead fw-light mb-4">My name is Dylan Kerr and like to bring creative ideas to life.</p>
+                                <p class="text-left text-muted">As someone with a wide variety of interests, I have continually explored different forms of art and design. My desire to understand how the world works, how we interact with our environment, and how we collaborate with each other captivates me. With my background in product design and virtual / augmented reality development, I have naturally found myself interested in designing 3D assets. It is something that gets me excited because of the limitless possibilities in this ever-changing landscape of technology. Please take a look at some of my projects and reach out to me to start up a conversation!</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-primary" title="Linkedin" target="_blank" href="https://www.linkedin.com/in/dylan-kerr-b97866132/"><i class="bi bi-linkedin"></i></a>
                                     <a class="text-primary" title="Github" target="_blank" href="https://github.com/DylanJamesK"><i class="bi bi-github"></i></a>
