--- a/project pages/vr-lunar-mission.html
+++ b/project pages/vr-lunar-mission.html
@@ -49,9 +49,10 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Exploring Permanently Shaded Regions of the Moon- in Virtual Reality</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
-                                            <p> To watch a full demo, visit my Youtube channel.</p>
+                                            <h2 class="fw-bolder">Exploring Permanently Shaded Regions of the Moon</h2>
+                                            <p>For NASA's Big Idea competition, the challenge at hand was to explore permanently shaded regions (PSR) of the Moon- areas where temperatures are far too low for most electronics. I worked with a team of engineers to design a space-grade lander attachment and probe. Our idea was to launch a disposable probe down into a PSR in order to temporarily transmit data back to the lander.</p>
+                                            <p>We wanted an engaging way to share this concept and the CAD models so I designed, textured, and animated a VR experience that guided the user through our concept.</p>
+                                            <p> To watch a full demo, visit my <a target=_blank href="https://www.youtube.com/channel/UCi3pWobppCnGdPr1OROI7Rw">Youtube channel.</a> </p>
                                         </div>
                                     </div>
                                 </div>
