--- a/project pages/xr-flight-debriefing.html
+++ b/project pages/xr-flight-debriefing.html
@@ -50,7 +50,8 @@
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Adding New Dimensions to Pilot Training</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>To no surprise, the US Air Force takes pilot training very seriously. After every flight, all involved pilots meet together in a private room to debrief each maneuver made. There are plenty of high-tech solutions that make the US Air Force as strong as they are, but one area that they addressed could use a revamp was debriefing. They are limited to very 2D methods of communicating a 3D event.</p>
+                                            <p>Together with a team of airmen at Luke Air Force Base, I created a live reenactment of a flight mission in 3D using Unity. The experience connected two users wearing Hololens 2 mixed reality headsets to a shared virtual environment. The most satisfying features included realistic flight path animations, an accurate topographic map, and UI controls to pause or pause/play/change the speed. </p>
                                         </div>
                                     </div>
                                 </div>
