--- a/project pages/vr-container-inspection.html
+++ b/project pages/vr-container-inspection.html
@@ -50,7 +50,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Virtual Training for International Sea Container Inspections</h2>
-                                            <p>Before working full-time with the British Standards Institution (BSI), I had the opportunity as a contractor to create a VR application for their training team. The challenge, as they described it, was that sea containers are high risk for importing invasive species and contraband behind false walls. A theorized that a new, more engaging method of training could improve the memory retention of trainees and ultimately reduce risk.</p>
+                                            <p>Before working full-time with the British Standards Institution (BSI), I had the opportunity as a contractor to create a VR application for their training team. The challenge, as they described it, was that sea containers are high risk for importing invasive species and contraband behind false walls. We theorized that a new, more engaging method of training could improve the memory retention of trainees and ultimately reduce risk.</p>
                                             <p>My favorite part the development process was the creating the custom tools with their UI selection wheel and the clipboard to-do list.</p>
                                         </div>
                                     </div>
