Updated some wording to focus on UX Design

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="col-xxl-5">
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
-                                <div class="badge bg-gradient-primary-to-primary-dylanBlue text-white mb-4"><div class="text-uppercase">Product Design &middot; UX / UI &middot; Game Dev</div></div>
+                                <div class="badge bg-gradient-primary-to-primary-dylanBlue text-white mb-4"><div class="text-uppercase">UX Design &middot; Industrial Design; Game Dev</div></div>
                                 <div class="fs-3 fw-light text-muted">I can help your business</div>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Design products and digital experiences.</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
@@ -71,7 +71,7 @@
                             <div class="my-5">
                                 <h2 class="text-center display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="text-center lead fw-light mb-4">My name is Dylan Kerr and like to bring creative ideas to life.</p>
-                                <p class="text-left text-muted">As someone with a wide variety of interests, I have continually explored different forms of art and design. My desire to understand how the world works, how we interact with our environment, and how we collaborate with each other captivates me. With my background in product design and virtual / augmented reality development, I have naturally found myself interested in designing 3D assets. It is something that gets me excited because of the limitless possibilities in this ever-changing landscape of technology. Please take a look at some of my projects and reach out to me to start up a conversation!</p>
+                                <p class="text-left text-muted">As someone with a wide variety of interests, I have continually explored different forms of art and design. My desire to understand how the world works, how we interact with our environment, and how we collaborate with each other captivates me. With my background in product design and virtual/augmented reality development, I have naturally gravitated toward UX Design. I’m passionate about creating intuitive and engaging experiences that seamlessly connect people with technology. Please take a look at some of my projects and reach out to me to start up a conversation!</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-primary" title="Linkedin" target="_blank" href="https://www.linkedin.com/in/dylan-kerr-b97866132/"><i class="bi bi-linkedin"></i></a>
                                     <a class="text-primary" title="Github" target="_blank" href="https://github.com/DylanJamesK"><i class="bi bi-github"></i></a>
