--- a/resume.html
+++ b/resume.html
@@ -59,12 +59,12 @@
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2"> October 2021 - Present</div>
-                                                <div class="small fw-bolder">Innovation Data Analyst</div>
+                                                <div class="small fw-bolder">Innovation Analyst</div>
                                                 <div class="small text-muted">British Standards Institution (BSI)</div>
-                                                <div class="small text-muted">Cambridge, UK [hybrid, AZ]</div>
+                                                <div class="small text-muted">Cambridge, UK [remote, AZ]</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>As an Analyst on the BSI Data Science & AI team, I am responsible for a variety of tasks involving data exploration, pilot programs, and market research.</div></div>
+                                        <div class="col-lg-8"><div>As an Analyst on the BSI Innovation team, I am responsible for a variety of tasks involving data exploration, pilot programs, market research, and designing innovation metrics.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -162,19 +162,19 @@
                                             <h3 class="fw-bolder mb-0"><span class="text-primary d-inline">Technical Skills</span></h3>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3 mb-4">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">3D Modeling</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Character Rigging</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Animation</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">UX/UI Design</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">User Research</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">User Testing</div></div>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3 mb-4">
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Unity</div></div>
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Adobe Software Suite</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Substance Painter</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Figma</div></div>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3">
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Front-End Web Development</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">UI/UX Design</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Sound Design</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">3D/CAD Modeling</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Animation</div></div>
                                         </div>
                                         
                                     </div>
